# simple-web-browser

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  adblock-urls.txt  build.sh  error-page.html  logging_config.yaml  plugins.txt  shell.nix  swb-icon.xcf  swb.desktop
adblock/: README.md  urls
bookmarks/src/: config.rs  swb_bookmarks.rs  sync.rs
core/: Cargo.toml
core/src/: app.rs  event.rs  main.rs  plugin.rs
db/: Cargo.toml  SCHEMA.md  swb-db-accounts-base.txt  swb-db.service
db/src/: db.rs  main.rs
include/: notebook.h  plugin.h  version.h
pkg_files/: PKGBUILD  README.md  build-deb.sh  swb.install
pkg_files/swb/DEBIAN/: control  postinst  postrm
plugins/swbadblock/: Makefile
plugins/swbadblock/src/: plugin.c
plugins/swbbackbtn/: Makefile
plugins/swbbackbtn/src/: plugin.c
plugins/swbfwdbtn/: Makefile
plugins/swbfwdbtn/src/: plugin.c
plugins/swbnavbar/: Makefile
plugins/swbnavbar/src/: plugin.c
plugins/swbrefreshbtn/: Makefile
plugins/swbrefreshbtn/src/: plugin.c
src/: app.rs  db.rs  gui.rs  main.c  main.rs  plugin.c  plugin.rs
swb_bookmarks/: Cargo.toml
swb_bookmarks/src/: config.rs  swb_bookmarks.rs  sync.rs
swb_webkit/: Cargo.toml
swb_webkit/src/: filter.rs  manager.rs  swb_webkit.rs
webkit/: Cargo.toml
webkit/src/: manager.rs
