[package]
name = "swb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.3"
webkit2gtk = "0.15"
confy = "0.4.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4.14"
log4rs = "1.0.0"
