[package]
name = "swb-db"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "swb-db"
path = "src/main.rs"

[dependencies]
rocket = "0.5.0-rc.2"
mongodb = "2.1.0"
reqwest = { version = "0.11.9", features = [ "stream" ] }
rand = "0.8.5"
tokio = "1.17.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.85"
lettre = "0.9"
lettre_email = "0.9"
tokio-util = "0.7.3"
bytes = "1.1.0"
clap = { version = "4.0.2", features = [ "cargo" ] }

