[package]
name = "swb_bookmarks"
version = "22.225.1"
edition = "2021"

[dependencies]
gtk = "0.15.4"
cascade = "1.0.0"
serde = { version = "1.0", features = [ "derive" ] }
confy = "0.4.0"
mongodb = "2.1.0"
tokio = "1.17.0"
reqwest = "0.11.9"
rand = "0.8.5"

[lib]
name = "swb_bookmarks"
crate-type = [ "cdylib" ]
path = "src/swb_bookmarks.rs"
