[package]
name = "swb_bookmarks"
version = "1.0.0"
edition = "2021"

[dependencies]
gtk = "0.15.4"
cascade = "1.0.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.85"
confy = "0.4.0"
tokio = { version = "1.21.2", features = [ "rt-multi-thread" ] }
reqwest = "0.11.9"

[lib]
name = "swb_bookmarks"
crate-type = [ "cdylib" ]
path = "src/swb_bookmarks.rs"
